# advent-of-code

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  day4.py  day5.py  day7.py  day9.py  environment.yml  pytest.ini  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot.yml  docker-image.yml  haskell.yml  python-package-conda.yml  rust.yml
2018/haskell/: adventofcode2018.cabal  package.yaml  stack.yaml
2018/haskell/benchmark/: Bench.hs
2018/haskell/src/: Day01.hs  Day02.hs  Lib.hs  demo.hs
2018/haskell/test/: Spec.hs
2018/rust/: Cargo.toml  code_gen.py
2018/rust/benches/: bench.rs  criterion.rs
2018/rust/src/: day01.rs  day02.rs  day08.rs  day09.rs  day10.rs  day12.rs  day14.rs  day24.rs  lib.rs  utils.rs
2019/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day7b.py  day8.py  day9.py  intcode.py  utils.py
2019/data/: day04.txt  get_data.py
2019/data/2017/: day01.txt
2019/python/: day02.py  day04.py  day05.py  day06.py  day07.py  day09.py  day10.py  day11.py  day13.py  intcode.py  utils.py
2019/rust/: .rustfmt.toml  Cargo.toml  Dockerfile  code_gen.py
2019/rust/.cargo/: config.toml
2019/rust/benches/: bench.rs  criterion.rs
2019/rust/src/: containers.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day21.rs  day22.rs  day23.rs  day25.rs  intcode.rs  lib.rs  main.rs  pathfinding.rs  simd.rs  spatial.rs  utils.rs
2019/rust/src/y2017/: day01.rs
2019/rust/src/y2018/: day01.rs  day02.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day22.rs  day23.rs  day24.rs  day25.rs
2019/rust/src/y2019/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  intcode.rs  intcode2.rs
2020/: day01.py  day02.py  day04.py  day06.py  day1.py  day10.py  day12.py  day14.py  day15.py  day16.py  day18.py  day19.py  day2.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  utils.py
2020/haskell/: README.md  adventofcode2020.cabal  haskell.cabal  package.yaml  test.hs
2020/haskell/app/: Main.hs
2020/haskell/src/: Day01.hs  Lib.hs
2020/haskell/test/: Day01.hs  Spec.hs
2020/python/: day05.py  day08.py  day17.py  day20.py
2020/rust/: Cargo.toml  code_gen.py
2020/rust/benches/: criterion.rs
2020/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  lib.rs  utils.rs
2020/rust/tests/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
benches/: criterion.rs
dev/bench/: data.js  index.html
haskell/: CHANGELOG.md  haskelladvent.cabal
haskell/app/: Downloader.hs  Main.hs
haskell/src/: IO.hs
python/: environment.yml  mypy.ini  pyproject.toml
python/y2019/: README.md  day01.py  day03.py  day08.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  intcode.py  utils.py
python/y2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  pytest.ini  utils.py
python/y2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day20.py  day21.py  day24.py  utils.py
python/y2022/: day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  utils.py
python/y2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day11.py  day13.py  day17.py  utils.py
rust/: .rustfmt.toml  Cargo.toml  code_gen.py
rust/src/: main.rs  pathfinding.rs  spatial.rs
rust/src/y2017/: day02.rs
rust/src/y2018/: day01.rs  day03.rs  day05.rs  day11.rs  day13.rs  day15.rs  day17.rs  day20.rs  day22.rs  day25.rs
rust/src/y2019/: day14.rs  day17.rs  day23.rs  day25.rs
rust/src/y2020/: day03.rs
src/: lib.rs  main.rs  utils.rs
src/y2017/: day01.rs  day04.rs
src/y2018/: day01.rs  day03.rs  day07.rs  day08.rs  day10.rs  day12.rs  day14.rs  day18.rs  day19.rs  day21.rs  day23.rs  day24.rs  transcoded_day21.txt
src/y2019/: day02.rs  day03.rs  day04.rs  day06.rs  day20.rs
src/y2020/: day01.rs  day02.rs  day04.rs  day05.rs
