cabal-version:      2.4
name:               haskelladvent
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chaichontat Sriworarat
maintainer:         34997334+chaichontat@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  IO

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, split
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskelladvent
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        haskelladvent,
        safe

    hs-source-dirs:   app
    default-language: Haskell2010

executable downloader
    main-is:          Downloader.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        haskelladvent,
        bytestring,
        dotenv,
        advent-of-code-api,
        text

    hs-source-dirs:   app
    default-language: Haskell2010
