[package]
authors = ["Chaichontat Sriworarat <csriwor1@jh.edu>"]
edition = "2021"
name = "advent-of-code"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.43"
ascii = "^1.0.0"
bitvec = "1.0.1"
bytecount = "^0.6.2"
colored = "^2.0.0"
crc32fast = "^1.2.1"
crossbeam = "0.8.1"
enum-map = "2.5.0"
hashbrown = "0.13.2"
itertools = "^0.10.1"
ndarray = "^0.15.3"
nohash-hasher = "^0.2.0"
num = "^0.4.0"
num-complex = "^0.4"
num-derive = "^0.3.3"
num-rational = "^0.4"
num-traits = "^0.2.14"
num_enum = "^0.5.4"
packed_simd = {version = "^0.3.5", package = "packed_simd_2"}
partitions = "^0.2.4"
paste = "^1.0.5"
pathfinding = "^4.2.1"
priority-queue = "^1.1.1"
rayon = "^1.5.1"
regex = "^1.5"
rstar = "^0.10.0"
safe_arch = "^0.6.0"
smallvec = "^1.6.1"
strum = "^0.24"
strum_macros = "^0.24"
thiserror = "^1.0.26"

[dev-dependencies]
criterion = "^0.4"
criterion-macro = "^0.4"
pprof = {version = "^0.11.1", features = ["criterion", "flamegraph", "protobuf"]}
pretty_assertions = "^1.3.0"

[[bench]]
harness = false
name = "criterion"
