[package]
authors = ["Chaichontat Sriworarat <chaichontat.s@duke.edu>"]
edition = "2018"
name = "advent-of-code-2018"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.4"
ascii = "1.0.0"
itertools = "0.10.1"
num = "0.4"

[dev-dependencies]
criterion = "0.3"
criterion-macro = "0.3"
pprof = {version = "0.4", features = ["criterion", "flamegraph", "protobuf"]}

[[bench]]
harness = false
name = "bench"

[profile.release]
debug = true
