[package]
authors = ["Chaichontat Sriworarat <chaichontat.s@duke.edu>"]
edition = "2018"
name = "advent-of-code-2020"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.4"
itertools = "0.10.1"
ndarray = "0.15.3"
nohash-hasher = "0.2.0"
num = "0.4.0"
num-complex = "0.4"
num-derive = "0.3.3"
num-rational = "0.4"
num-traits = "0.2.14"
regex = "1.5"
strum = "0.21"
strum_macros = "0.21"

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "bench"
