[package]
authors = ["Chaichontat Sriworarat <chaichontat.s@duke.edu>"]
edition = "2018"
name = "advent-of-code"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.4"
ascii = "1.0.0"
bitvec = "0.22.3"
bytecount = "0.6.2"
crc32fast = "1.2.1"
itertools = "0.10.1"
jemallocator = "0.3.2"
ndarray = "0.15.3"
nohash-hasher = "0.2.0"
num = "0.4.0"
num-complex = "0.4"
num-derive = "0.3.3"
num-rational = "0.4"
num-traits = "0.2.14"
pathfinding = "2.1.6"
regex = "1.5"
rstar = "0.9.0"
strum = "0.21"
strum_macros = "0.21"

[dev-dependencies]
criterion = "0.3"
criterion-macro = "0.3"
pprof = {version = "0.4", features = ["criterion", "flamegraph", "protobuf"]}

[[bench]]
harness = false
name = "criterion"

[profile.release]
debug = true
