[package]
authors = ["Chaichontat Sriworarat <chaichontat.s@duke.edu>"]
edition = "2018"
name = "advent-of-code"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "^1.0.0"
bitvec = "^0.22.3"
bytecount = "^0.6.2"
colored = "^2.0.0"
crc32fast = "^1.2.1"
hashbrown = "^0.11.2"
itertools = "^0.10.1"
ndarray = "^0.15.3"
nohash-hasher = "^0.2.0"
num = "^0.4.0"
num-complex = "^0.4"
num-derive = "^0.3.3"
num-rational = "^0.4"
num-traits = "^0.2.14"
num_enum = "^0.5.3"
packed_simd = {version = "^0.3.5", package = "packed_simd_2"}
partitions = "^0.2.4"
paste = "^1.0.5"
pathfinding = "^2.1.6"
priority-queue = "^1.1.1"
rayon = "^1.5.1"
regex = "^1.5"
rstar = "^0.9.0"
safe_arch = "^0.6.0"
smallvec = "^1.6.1"
strum = "^0.21"
strum_macros = "^0.21"

[dev-dependencies]
criterion = "^0.3"
criterion-macro = "^0.3"
pprof = {version = "^0.5.0", features = ["criterion", "flamegraph", "protobuf"]}
pretty_assertions = "^0.7.2"

[[bench]]
harness = false
name = "criterion"

[profile.bench]
lto = true
