[package]
authors = ["Chaichontat Sriworarat <chaichontat.s@duke.edu>"]
edition = "2018"
name = "advent-of-code-2020"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.4"
bitvec = "0.22.3"
itertools = "0.10.1"
ndarray = "0.15.3"
nohash-hasher = "0.2.0"
regex = "1.5"
strum = "0.21"
strum_macros = "0.21"

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "criterion"
